--- a/views/reverse.erb
+++ b/views/reverse.erb
@@ -2,9 +2,9 @@
 
 <p>Enter a string to see its reversed output.</p>
 
-<form action="/reverse" method="post">
-    <label for="user_input">String:</label>
-    <input type="text" name="user_input">
+<form action="/reverse" method="get">
+    <label for="query">String:</label>
+    <input type="text" name="query">
     <input type="submit" value="reverse" class="button-primary">
 </form>
 
